# cocotola-api-fast

./: .gitignore  Makefile  README.md  pyproject.toml
cocotola_api_fast/: container.py  main.py
cocotola_api_fast/config/: local.yml
cocotola_api_fast/controller/: translation_controller.py  workbook_controller.py
cocotola_api_fast/domain/: workbook.py
cocotola_api_fast/gateway/: database.py  repository_factory.py  workbook_repository.py
cocotola_api_fast/log/: app_logger_formatter.py  uvicorn_log_config.py
cocotola_api_fast/service/: irepository_factory.py  iworkbook_repository.py
cocotola_api_fast/usecase/: student_usecase_workbook.py
docker/: Dockerfile
tests/: test_cocotola_api_fast.py
tests/controller/: workbook_controller_test.py
